<resources>
    <string name="app_name">baratio2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Baratio</string>
    <string name="nav_header_subtitle">La tienda más barata</string>
    <string name="nav_header_option">Cerrar Sesión</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inventario">Inventario</string>
    <string name="empleado">Empleado</string>
    <string name="addUser">Añadir Usuario</string>
    <string name="addProduct">Añadir Producto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre</string>
    <string name="id">ID</string>
    <string name="pass">Contraseña</string>
    <string name="precio">Precio</string>
    <string name="tipo">Nivel</string>
    <string name="mail">Correo</string>
    <string name="cantidad">Cantidad</string>
    <string name="marca">Marca</string>
    <string name="descripcion">Descripcion</string>
    <string name="empleados">Empleados</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="crear_producto">Crear Producto</string>
    <string name="modificar_producto">Modificar Producto</string>
    <string name="modificar_usuario">Modificar Usuario</string>
    <string name="agregar">Agregar</string>
    <string name="volver">Volver</string>
    <string name="modificar">Modificar</string>
    <string name="agregar_usuario">Crear usuario</string>
    <string name="correo">Correo</string>
    <string-array name="marca">
        <item>Marca</item>
        <item>Usuario</item>
    </string-array>
    <string-array name="nivel">
        <item>User</item>
        <item>Admin</item>
    </string-array>
</resources>