<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="usuario" type="com.example.baratio2.Usuario"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTituloNombre"
                android:layout_width="240dp"
                android:layout_height="20dp"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/txtTituloPrecio"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                android:text="@string/id" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="240dp"
                android:layout_height="43dp"
                android:text="@{usuario.getNombre()}"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btnCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_unfold_more_24" />

            <ImageButton
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/delete" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTituloCantidad"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:text="@string/tipo" />

            <TextView
                android:id="@+id/txtTituloMarca"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/txtTituloDescripcion"
                android:layout_width="185dp"
                android:layout_height="20dp"
                android:text="@string/pass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCantidad"
                android:layout_width="70dp"
                android:layout_height="43dp"
                android:text="@{usuario.getTipoUsuario()}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtMarca"
                android:layout_width="130dp"
                android:layout_height="43dp"
                android:text="@{usuario.getCorreo()}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="185dp"
                android:layout_height="44dp"
                android:text="@{usuario.getPass()}"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</layout>